// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when listing organizations: Header title 1`] = `
<div
  class="ant-page-header site-page-header ant-page-header-ghost"
>
  <div
    class="ant-page-header-heading "
  >
    <div
      class="ant-page-header-heading-left"
    >
      <span
        class="ant-page-header-heading-title"
        title="Organization list"
      >
        Organization list
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when listing organizations: Search 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  test 345
</td>
`;

exports[`renders correctly when listing organizations: Search 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/205"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 1`] = `
<div
  class="singleKeyValue-pair__default"
>
  <dt>
    Organization id
  </dt>
  <dd>
    205
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 2`] = `
<div
  class="singleKeyValue-pair__default"
>
  <dt>
    Organization identifier
  </dt>
  <dd>
    205
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 3`] = `
<div
  class="singleKeyValue-pair__default"
>
  <dt>
    Organization status
  </dt>
  <dd>
    Active
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: single key value pairs detail section 4`] = `
<div
  class="singleKeyValue-pair__default"
>
  <dt>
    Organization practitioners
  </dt>
  <dd>
    <ul
      id="practitioner-teams"
    >
      <li>
        Allay Allan
      </li>
    </ul>
  </dd>
</div>
`;

exports[`renders correctly when listing organizations: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  test 345
</td>
`;

exports[`renders correctly when listing organizations: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/205"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 1 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 4
</td>
`;

exports[`renders correctly when listing organizations: table row 1 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/363"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Test Team One
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/361"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 5
</td>
`;

exports[`renders correctly when listing organizations: table row 2 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/364"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 3
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/362"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Test Team 5
</td>
`;

exports[`renders correctly when listing organizations: table row 3 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      class="m-0 p-1"
      href="/admin/teams/edit/365"
    >
      Edit
    </a>
    <div
      class="ant-divider css-dev-only-do-not-override-k7429z ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;
